# src/main/java/com/teletubbies/course/instructor/InstructorController.java
@@ -3,10 +3,15 @@ package com.teletubbies.course.instructor;
 import org.springframework.web.bind.annotation.RestController;
 
 import com.teletubbies.course.InstructorsApi;
+import com.teletubbies.course.model.InstructorResource;
 import com.teletubbies.course.model.InstructorResponse;
-import com.teletubbies.course.model.InstructorsResponse;
+import com.teletubbies.course.model.InstructorsData;
+import com.teletubbies.course.model.InstructorsPagedResources;
 import com.teletubbies.course.model.NewInstructorRequest;
+import com.teletubbies.course.model.PageResource;
 import com.teletubbies.course.model.UpdateInstructorRequest;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -33,9 +38,24 @@ public class InstructorController implements InstructorsApi {
 
   @Override
   @PreAuthorize("hasAnyRole('ADMINISTRATOR', 'TEACHER')")
-  public ResponseEntity<InstructorsResponse> getAllInstructors() {
+  public ResponseEntity<InstructorsPagedResources> getAllInstructors(
+      final Pageable pageable,
+      final String fullName,
+      final String email,
+      final InstructorRoleType role) {
+    final Page<InstructorResource> page =
+        instructorService.getAll(fullName, email, role, pageable);
+
     return ResponseEntity.ok(
-        InstructorsResponse.builder().instructors(instructorService.getAll()).build());
+        InstructorsPagedResources.builder()
+            .data(
+                InstructorsData.builder()
+                    .content(page.getContent())
+                    .size(page.getNumberOfElements())
+                    .build())
+            .page(PageResource.builder().number(page.getNumber()).size(page.getSize()).build())
+            .totalElements(page.getTotalElements())
+            .build());
   }
 
   @Override
